bpo-29271: Fix Task.current_task and Task.all_tasks to accept None.